--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         Via <a href="http://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
 
-        <h3><a id="user-content-dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
+        <h3><a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
             <li>QtPass requires Qt 4.8 or later, preferably Qt5.</li>
             <li>The Linguist package is required to compile the translations.</li>
@@ -221,14 +221,14 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
         <h2><a id="faq" class="anchor" href="#faq" aria-hidden="true"><span class="octicon octicon-link"></span></a>FAQ</h2>
 
-        <h3><a id="user-content-cant-save-a-password" class="anchor" href="#cant-save-a-password" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can't save a password</h3>
+        <h3><a id="cant-save-a-password" class="anchor" href="#cant-save-a-password" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can't save a password</h3>
 
         <ul>
             <li>Is folder initialised? Easiest way is to use the [Users] button and make sure you can encrypt for someone (eg. yourself)</li>
             <li>Are you using git? If not, make sure it is switched off.</li>
         </ul>
 
-        <h3><a id="user-content-i-have-an-issue-with-gnome-keyring" class="anchor" href="#i-have-an-issue-with-gnome-keyring" aria-hidden="true"><span class="octicon octicon-link"></span></a>I have an issue with GNOME keyring</h3>
+        <h3><a id="i-have-an-issue-with-gnome-keyring" class="anchor" href="#i-have-an-issue-with-gnome-keyring" aria-hidden="true"><span class="octicon octicon-link"></span></a>I have an issue with GNOME keyring</h3>
 
         <ul>
             <li>Disable GNOME keyring</li>
@@ -254,19 +254,19 @@ fi
             <li>More info: <a href="https://github.com/IJHack/qtpass/issues/60">issue 60</a> and <a href="https://github.com/IJHack/qtpass/issues/73">issue 73</a></li>
         </ul>
 
-        <h3><a id="user-content-can-i-import-from-keepass-lastpass-or-x" class="anchor" href="#can-i-import-from-keepass-lastpass-or-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I import from KeePass, LastPass or X?</h3>
+        <h3><a id="can-i-import-from-keepass-lastpass-or-x" class="anchor" href="#can-i-import-from-keepass-lastpass-or-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I import from KeePass, LastPass or X?</h3>
 
         <ul>
             <li>Yes, check <a href="http://www.passwordstore.org/#migration">passwordstore.org/#migration</a> for more info.</li>
         </ul>
 
-        <h3><a id="user-content-current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
+        <h3><a id="current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
 
         <ul>
             <li>Read the current <a href="/docs/md_FAQ.html">QtPass FAQ</a>.</li>
         </ul>
 
-        <h3><a id="user-content-where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
+        <h3><a id="where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
         
         <ul>
             <li>Create an <a href="https://github.com/IJHack/qtpass/">issue</a> issues on github.</li>
