twitter card fix

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <meta name="twitter:site" content="@annejanbrouwer">
     <meta name="twitter:title" content="QtPass GUI for pass, the standard UNIX password manager">
     <meta name="twitter:description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <meta name="twitter:url" content="https://qtpass.org/">
+    <meta name="twitter:image" content="https://qtpass.org/images/qtpass.png">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
     <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
 <script type="application/ld+json">
