--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.1</small></h1>
-        <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
-            <a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
+            <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
         </p>
 
         <ul>
-            <li><a href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
-            <li><a href="https://github.com/IJHack/qtpass/tarball/master">Latest <strong>TAR Ball</strong></a></li>
-            <li><a href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
+            <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+            <li><a title="QtPass latest source" href="https://github.com/IJHack/qtpass/tarball/master">Latest <strong>TAR Ball</strong></a></li>
+            <li><a title="QtPass project" href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
         </ul>
 
         <div class="screenshots">
@@ -100,10 +100,10 @@
         <h2><a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
         <ul>
-            <li>Using <a href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
+            <li>Using <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
             <li>Cross platform: Linux, BSD, OS X and Windows</li>
             <li>Using native widgets and iconography where possible</li>
-            <li>Reading pass <a href="http://www.passwordstore.org/">password stores</a></li>
+            <li>Reading pass <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">password stores</a></li>
             <li>Decrypting and displaying the password and related info</li>
             <li>Editing and adding of passwords and information</li>
             <li>Updating to and from a git repository</li>
@@ -112,7 +112,7 @@
             <li>Copying password to clipboard</li>
             <li>Configurable shoulder surfing protection options</li>
             <li>Experimental WebDAV support </li>
-            <li><a href="/docs/md_README.html">Much more</a></li>
+            <li><a title="QtPass README" href="/docs/md_README.html">Much more</a></li>
         </ul>
         <h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
