--- a/changelog.html
+++ b/changelog.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>QtPass GUI for pass, the standard UNIX password manager</title>
-    <meta name="description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <title>QtPass 1.1 Changelog</title>
+    <meta name="description" content="Latest changes to QtPass">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -77,7 +77,7 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.1</small></h1>
-        <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
             <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
@@ -158,6 +158,12 @@
             <li>Translation fixes and additions</li>
         </ul>
 
+        <h2><a id=v1.0" class="anchor" href="#v1.0" aria-hidden="true"><span class="octicon octicon-link"></span></a>Older releases</h2>
+
+        <ul>
+            <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
+            <li><a title="Changes in beta"  href="/changelog.beta">Changelog of beta releases</a></li>
+        </ul>
 
         <p>
             <br />
