--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 
         <h2><a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
+        <p>
+            Read the <a title="QtPass current changelog" href="/changelog">changelog</a> for the latest features and fixes.
+        </p>
+
         <ul>
             <li>Using <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
             <li>Cross platform: Linux, BSD, OS X and Windows</li>
@@ -114,6 +118,7 @@
             <li>Experimental WebDAV support </li>
             <li><a title="QtPass README" href="/docs/md_README.html">Much more</a></li>
         </ul>
+
         <h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
         <h3><a id="linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h3>
@@ -270,6 +275,14 @@ fi
         <ul>
             <li>Create an <a title="QtPass issue queue" href="https://github.com/IJHack/qtpass/issues">issue</a> issues on github.</li>
             <li>Send an email to <a title="Mail us for help" href="mailto:help@qtpass.org">help@qtpass.org</a></li>
+        </ul>
+
+        <h3><a id="changelogs" class="anchor" href="#changelogs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Read up on recent changes</h3>
+
+        <ul>
+            <li><a title="Changes in 1.1" href="/changelog">Changelog of 1.1 releases</a></li>
+            <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
+            <li><a title="Changes in beta" href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
 
         <p>
