--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>QtPass 1.0 Changelog</title>
-    <meta name="description" content="Older changes to QtPass">
+    <title>QtPass beta Changelog</title>
+    <meta name="description" content="Even older changes to QtPass">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
