--- a/downloads.html
+++ b/downloads.html
@@ -136,7 +136,7 @@
         <pre><code>cd qtpass &amp;&amp; chmod +x qtpass.SlackBuild &amp;&amp; ./qtpass.SlackBuild</code></pre>
 
         <h4>FreeBSD</h4>
-        In the FreeBSD <a title="QtPass FreeBSD port" href="https://www.freshports.org/sysutils/qtpass/">ports</a>i repository.
+        In the FreeBSD <a title="QtPass FreeBSD port" href="https://www.freshports.org/sysutils/qtpass/">ports</a> repository.
         <pre><code>pkg install qtpass</code></pre>
         <pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make install clean</code></pre>
 
