ArchLinux: moved from AUR to [community]

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
         <h3><a id="linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h3>
 
         <h4>Arch</h4>
-        <pre><code>packer qtpass</code></pre>
-	    <pre><code>yaourt -S qtpass</code></pre>
+        <pre><code>pacman -S qtpass</code></pre>
 
         <h4>OpenSUSE &amp; Fedora</h4>
         <pre><code>yum install qtpass</code></pre>
