--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ fi
         <h3><a id="changelogs" class="anchor" href="#changelogs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Read up on recent changes</h3>
 
         <ul>
-            <li><a title="Changes in master" href="/docs/md_CHANGELOG.html">Current Change Log</a></li>
+            <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
             <li><a title="Changes in 1.1" href="/changelog">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
             <li><a title="Changes in beta" href="/changelog.beta">Changelog of beta releases</a></li>
