--- a/changelog.html
+++ b/changelog.html
@@ -96,7 +96,20 @@
 
     </header>
     <section>
+	
+	<h2><a id=v1.1.4" class="anchor" href="#v1.1.4" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.1.4 It's been a while</h2>
 
+	<ul>
+	    <li>PREFIX is now really a prefix <a href="https://github.com/IJHack/qtpass/issues/185" class="issue-link js-issue-link" data-id="161478938" data-error-text="Failed to load issue title" data-permission-text="Issue title is private" title="PREFIX is now really a prefix">#185</a> </li>
+	    <li>Encoding issues <a href="https://github.com/IJHack/qtpass/issues/192" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/192" data-id="168505679" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#192</a>, <a href="https://github.com/IJHack/qtpass/issues/131" class="issue-link js-issue-link" data-id="124544398" data-error-text="Failed to load issue title" data-permission-text="Issue title is private" title="Bug: Special characters in Template">#131</a>, <a href="https://github.com/IJHack/qtpass/issues/101" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/101" data-id="107906809" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#101</a> and <a href="https://github.com/IJHack/qtpass/issues/91" class="issue-link js-issue-link" data-id="103536677" data-error-text="Failed to load issue title" data-permission-text="Issue title is private" title="saved password '§' turns to 'Â§' when copied to clipboard or shown when editing">#91</a> fixed in <a href="https://github.com/IJHack/qtpass/pull/198" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/198" data-id="179031352" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#198</a> and <a href="https://github.com/IJHack/qtpass/pull/199" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/199" data-id="179318442" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#199</a> by <a href="https://github.com/asalamon74" class="user-mention">@asalamon74</a>
+	    </li>
+	    <li>Re-assign permissions when adding users <a href="https://github.com/IJHack/qtpass/issues/161" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/161" data-id="132920489" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#161</a>
+	    </li>
+	    <li>French translations by <a href="https://github.com/the-glu" class="user-mention">@the-glu</a> via <a href="https://www.transifex.com/ijhack/qtpass/">https://www.transifex.com/ijhack/qtpass/</a>
+	    </li>
+	    <li>Completed Dutch and German translations</li>
+	</ul>
+	
         <h2><a id=v1.1.3" class="anchor" href="#v1.1.3" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.1.3 Some more bug-squashing</h2>
 
         <ul>
