--- a/downloads.html
+++ b/downloads.html
@@ -102,7 +102,8 @@
         <h3><a id="linux-bsd" class="anchor" href="#linux-bsd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux / BSD</h3>
 
         <h4>Arch</h4>
-        Latest <a title="Arch Linux QtPass package" href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a title="Arch QtPass git package" href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a title="Arch AUR" href="https://aur.archlinux.org/">aur</a>.
+        Latest <a title="Arch Linux QtPass package" href="https://www.archlinux.org/packages/community/x86_64/qtpass/">stable</a> and <a title="Arch QtPass git package" href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a title="Arch AUR" href="https://aur.archlinux.org/">aur</a>.
+	<pre><code>pacman -S qtpass</code></pre>
         <pre><code>packer qtpass</code></pre>
         <pre><code>yaourt -S qtpass</code></pre>
 
