--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ fi
         <h3><a id="current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
 
         <ul>
-            <li>Read the current <a title="Frequently Asked Questions" href="/docs/md_FAQ.html">QtPass FAQ</a> and <a title="Developer information" href="docs/md_CONTRIBUTING.html">documentation on contributing</a>.</li>
+            <li>Read the current <a title="Frequently Asked Questions" href="/docs/md__f_a_q.html">QtPass FAQ</a> and <a title="Developer information" href="docs/md__c_o_n_t_r_i_b_u_t_i_n_g.html">documentation on contributing</a>.</li>
         </ul>
 
         <h3><a id="where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
