Link to 'master' changelog

--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -204,6 +204,7 @@
         <h2><a id=v1.1" class="anchor" href="#v1.1" aria-hidden="true"><span class="octicon octicon-link"></span></a>More releases</h2>
 
         <ul>
+            <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
             <li><a href="/changelog">Changelog of 1.1 releases</a></li>
             <li><a href="/changelog.old">Changelog of 1.0 releases</a></li>
         </ul>
