--- a/changelog.html
+++ b/changelog.html
@@ -174,6 +174,7 @@
         <h2><a id=v1.0" class="anchor" href="#v1.0" aria-hidden="true"><span class="octicon octicon-link"></span></a>Older releases</h2>
 
         <ul>
+            <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
             <li><a title="Changes in beta"  href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
