--- a/changelog.old.html
+++ b/changelog.old.html
@@ -275,6 +275,7 @@
         <h2><a id=beta" class="anchor" href="#beta" aria-hidden="true"><span class="octicon octicon-link"></span></a>More releases</h2>
 
         <ul>
+            <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
             <li><a href="/changelog">Changelog of 1.1 releases</a></li>
             <li><a href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
