README had old url now md__r_e_a_d_m_e.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li>Copying password to clipboard</li>
             <li>Configurable shoulder surfing protection options</li>
             <li>Experimental WebDAV support </li>
-            <li><a title="QtPass README" href="/docs/md_README.html">Much more</a></li>
+            <li><a title="QtPass README" href="/docs/md__r_e_a_d_m_e.html">Much more</a></li>
         </ul>
 
         <h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
