--- a/changelog.html
+++ b/changelog.html
@@ -85,8 +85,8 @@
 
         <ul>
             <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
-            <li><a title="QtPass latest source" href="https://github.com/IJHack/qtpass/tarball/master">Latest <strong>TAR Ball</strong></a></li>
-            <li><a title="QtPass project" href="https://github.com/IJHack/qtpass">View On <strong>GitHub</strong></a></li>
+            <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe<strong>Windows</strong></a></li>
+            <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
 
         <div class="screenshots">
@@ -181,10 +181,10 @@
 
         <p>
             <br />
-            <img class="compatible" src="images/linux.png" alt="Linux Compatible" />
-            <img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" />
-            <img class="compatible" src="images/osxy.png" alt="OS X Compatible" />
-            <img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" />
+            <a href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
+            <a href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
+            <a href="/downloads#macOS"><img class="compatible" src="images/osxy.png" alt="OS X Compatible" /></a>
+            <a href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
         </p>
     </section>
     <footer>
