--- a/changelog.html
+++ b/changelog.html
@@ -96,6 +96,29 @@
 
     </header>
     <section>
+
+	<h2><a id=v1.1.5" class="anchor" href="#v1.1.5" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.1.5 The more the merrier</h2>
+
+	<ul>
+		<li>View box no longer trims whitespace <a href="https://github.com/IJHack/QtPass/issues/210" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/210" data-id="183713082" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#210</a>
+		</li>
+		<li>Full translation to Simplified Chinese.  <a href="https://github.com/IJHack/QtPass/issues/208" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/208" data-id="182422022" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#208</a>
+		</li>
+		<li>KeygenDialog email and name validation <a href="https://github.com/IJHack/QtPass/issues/202" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/202" data-id="180269911" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#202</a> <a href="https://github.com/IJHack/QtPass/pull/203" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/203" data-id="180625663" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#203</a> by <a href="https://github.com/dakk" class="user-mention">@dakk</a>
+		</li>
+		<li>Allow ssh:// links <a href="https://github.com/IJHack/QtPass/pull/211" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/211" data-id="183957960" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#211</a> by <a href="https://github.com/cgonzalez" class="user-mention">@cgonzalez</a>
+		</li>
+		<li>Increase maximum password length to 255 <a href="https://github.com/IJHack/QtPass/pull/209" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/209" data-id="183403205" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#209</a> by <a href="https://github.com/vladimiroff" class="user-mention">@vladimiroff</a>
+		</li>
+		<li>Password generation options and templates <a href="https://github.com/IJHack/QtPass/pull/207" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/207" data-id="182370194" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#207</a> <a href="https://github.com/IJHack/QtPass/issues/98" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/98" data-id="106055197" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#98</a> by <a href="https://github.com/jounathaen" class="user-mention">@jounathaen</a> </li>
+		<li>Lookup validity field to check if keys are valid <a href="https://github.com/IJHack/QtPass/pull/201" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/201" data-id="179569268" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#201</a> by <a href="https://github.com/thotypous" class="user-mention">@thotypous</a> </li>
+		<li>Fixed a spelling error <a href="https://github.com/IJHack/QtPass/pull/200" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/200" data-id="179544029" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#200</a> by <a href="https://github.com/innir" class="user-mention">@innir</a>
+		</li>
+		<li>Updated German Translation <a href="https://github.com/IJHack/QtPass/pull/206" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/206" data-id="182303298" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#206</a>
+		</li>
+		<li>Italian translation <a href="https://github.com/IJHack/QtPass/pull/204" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/204" data-id="180640023" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#204</a> </li>
+		<li>Windows build with Qt 5.7 (almost half the size now)</li>
+	</ul>	
 	
 	<h2><a id=v1.1.4" class="anchor" href="#v1.1.4" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.1.4 It's been a while</h2>
 
