Updated Changelog, more links on 404

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>QtPass 404</title>
-    <meta name="description" content="QtPass downloads for Windows, Mac, Linux and BSD. Instalation instructions for all distributions.">
+    <meta name="description" content="QtPass 404 page not found for all distributions.">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -102,6 +102,11 @@
         <h3><a id="page-not-found" class="anchor" href="#page-not-found" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Page not found . .</h3>
 
         <ul>
+	    <li><a title="Frontpage" href="/">QtPass</a></li>
+	    <li><a title="FAQ" href="/docs/md__f_a_q.html">FAQ</a></li>
+	    <li><a title="Downloads" href="/downloads">Downloads</a></li>
+	    <li><a title="Documentation" href="/docs/">Documentation</a></li>
+	    <li><a title="Contributing" href="/docs/md__c_o_n_t_r_i_b_u_t_i_n_g.html">Contributing</a></li>
 	    <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
             <li><a title="Changes in 1.1" href="/changelog">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
