--- a/404.html
+++ b/404.html
@@ -6,28 +6,28 @@
     <title>QtPass 404</title>
     <meta name="description" content="QtPass 404 page not found for all distributions.">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./images/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="QtPass GUI for pass, the standard UNIX password manager">
     <meta property="og:site_name" content="QtPass">
@@ -90,8 +90,8 @@
         </ul>
 
         <div class="screenshots">
-            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow" />
-            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration" />
+            <img id="qtpass" src="/images/qtpass.png" alt="QtPass MainWindow" />
+            <img id="config" class="hidden" src="/images/config.png" alt="QtPass Configuration" />
         </div>
 
     </header>
@@ -115,10 +115,10 @@
 
         <p>
             <br />
-            <a href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
-            <a href="/downloads#macOS"><img class="compatible" src="images/osxy.png" alt="OS X Compatible" /></a>
-            <a href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
+            <a href="/downloads#linux-bsd"><img class="compatible" src="/images/linux.png" alt="Linux Compatible" /></a>
+            <a href="/downloads#Windows"><img class="compatible" src="/images/win10.png" alt="Windows 10 Compatible" /></a>
+            <a href="/downloads#macOS"><img class="compatible" src="/images/osxy.png" alt="OS X Compatible" /></a>
+            <a href="/downloads#FreeBSD"><img class="compatible" src="/images/freebsd.png" alt="FreeBSD Compatible" /></a>
         </p>
     </section>
     <footer>
@@ -138,7 +138,7 @@
   "url": "https://qtpass.org"
 }
 </script>
-<script src="javascripts/scale.fix.js"></script>
-<script src="javascripts/main.js"></script>
+<script src="/javascripts/scale.fix.js"></script>
+<script src="/javascripts/main.js"></script>
 </body>
 </html>
