--- a/downloads.html
+++ b/downloads.html
@@ -85,7 +85,7 @@
 
         <ul>
             <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
-            <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe<strong>Windows</strong></a></li>
+            <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe <strong>Windows</strong></a></li>
             <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
 
@@ -188,10 +188,10 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
         <p>
             <br />
-            <a href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
-            <a href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
-            <a href="/downloads#macOS"><img class="compatible" src="images/osxy.png" alt="OS X Compatible" /></a>
-            <a href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
+            <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
+            <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/osxy.png" alt="OS X Compatible" /></a>
+            <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
         </p>
     </section>
     <footer>
