--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <li>Configuration options for backends and executable/folder locations</li>
             <li>Copying password to clipboard</li>
             <li>Configurable shoulder surfing protection options</li>
+	    <li>Easy onboarding for new users</li>
             <li>Experimental WebDAV support </li>
             <li><a title="QtPass README" href="/docs/md__r_e_a_d_m_e.html">Much more</a></li>
         </ul>
