macOS Sierra lolgos

--- a/changelog.html
+++ b/changelog.html
@@ -236,7 +236,7 @@
             <br />
             <a title="Install on Linux or FreeBSD" href="/downloads#linux-bsd"><img class="compatible" src="images/linux.png" alt="Linux Compatible" /></a>
             <a title="Install on Windows" href="/downloads#Windows"><img class="compatible" src="images/win10.png" alt="Windows 10 Compatible" /></a>
-            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/osxy.png" alt="OS X Compatible" /></a>
+            <a title="Install on macOS" href="/downloads#macOS"><img class="compatible" src="images/macos.png" alt="OS X Compatible" /></a>
             <a title="Install on FreeBSD" href="/downloads#FreeBSD"><img class="compatible" src="images/freebsd.png" alt="FreeBSD Compatible" /></a>
         </p>
     </section>
