brew link --overwrite fixes #315

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <p>On Mac OS X:</p>
 
         <pre><code>brew install qt5
-brew link --force qt5
+brew link --overwrite --force qt5
 xcode-select --install
 qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
