--- a/downloads.html
+++ b/downloads.html
@@ -171,7 +171,7 @@
         <p>On Mac OS X:</p>
 
         <pre><code>brew install qt5
-brew link --force qt5
+brew link --overwrite --force qt5
 xcode-select --install
 qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
