Updated to 1.2.0 release

--- a/changelog.old.html
+++ b/changelog.old.html
@@ -276,7 +276,8 @@
 
         <ul>
             <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a href="/changelog">Changelog of 1.1 releases</a></li>
+            <li><a href="/changelog">Changelog of 1.2 releases</a></li>
+            <li><a href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
 
