--- a/downloads.html
+++ b/downloads.html
@@ -76,7 +76,7 @@
 <div class="background"></div>
 <div class="wrapper">
     <header>
-        <h1>QtPass <small>1.1</small></h1>
+        <h1>QtPass <small>1.2</small></h1>
         <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -143,7 +143,7 @@
 
         <h3 id="Windows"><a id="downloads-windows" class="anchor" href="#windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows</h3>
 
-        <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.1.6/qtpass-1.1.6.exe">QtPass 1.1.6</a>
+        <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.2.0/qtpass-1.2.0.exe">QtPass 1.2.0</a>
 
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
@@ -151,7 +151,7 @@
 
         <h3 id="macOS"><a id="downloads-osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>macOS</h3>
 
-        <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.1.6/qtpass-1.1.6.dmg">QtPass 1.1.6</a>
+        <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.2.0/qtpass-1.2.0.dmg">QtPass 1.2.0</a>
 
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
@@ -181,7 +181,8 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
         <ul>
 	    <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.1" href="/changelog">Changelog of 1.1 releases</a></li>
+            <li><a title="Changes in 1.2" href="/changelog">Changelog of 1.2 releases</a></li>
+            <li><a title="Changes in 1.1" href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
             <li><a title="Changes in beta" href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
