--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
-  "softwareVersion" : "1.1.6",
+  "softwareVersion" : "1.2.0",
   "applicationCategory" : "Security, Utility",
   "offers": {
     "@type": "Offer",
@@ -66,8 +66,8 @@
   },
   "aggregateRating" : {
     "@type": "AggregateRating",
-    "ratingValue": "4.7",
-    "reviewCount": "8"
+    "ratingValue": "4.8",
+    "reviewCount": "18"
   }
 }
 </script>
@@ -76,7 +76,7 @@
 <div class="background"></div>
 <div class="wrapper">
     <header>
-        <h1>QtPass <small>1.1.6</small></h1>
+        <h1>QtPass <small>1.2.0</small></h1>
         <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -281,7 +281,8 @@ fi
 
         <ul>
             <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.1" href="/changelog">Changelog of 1.1 releases</a></li>
+            <li><a title="Changes in 1.2" href="/changelog">Changelog of 1.2 releases</a></li>
+            <li><a title="Changes in 1.1" href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
             <li><a title="Changes in beta" href="/changelog.beta">Changelog of beta releases</a></li>
         </ul>
