Insecure Password Generation

--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
     </header>
     <section>
 
+        <h2><a id="insecure-generation" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Insecure Password Generation</h2>
+
+        <p>
+            The current way of generating passwords is insecure. All passwords that have been generated with QtPass in the past must be regenerated and changed.
+        </p>
+
+        <p>
+            Read more about this <a title="QtPass Insecure Password Generation" href="https://github.com/IJHack/QtPass/issues/338">issue</a> on <a title="QtPass Insecure Password Generation" href="https://github.com/IJHack/QtPass/issues/338">Github</a>.
+        </p>
+
+        <p>
+            We advice to change any password you may have generated with QtPass for a more secure one generated in some other way.
+            As soon as a new release or master build is available, we'll update the information on this page.
+        </p>
+
         <h2><a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
         <p>
