master has patches now

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </p>
 
         <p>
-            We advice to change any password you may have generated with QtPass for a more secure one generated in some other way.
+            We advice to change any password you may have generated with the QtPass default (non pwgen) generator for a more secure one generated in some other way.
 	</p>
 
 	<p>
