--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </header>
     <section>
 
-        <h2><a id="insecure-generation" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Insecure Password Generation</h2>
+        <h2><a id="insecure-generation" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Insecure Password Generation prior to 1.2.1</h2>
 
         <p>
             All passwords generated with QtPass' built-in password generator prior to 1.2.1 are possibly predictable and enumerable by hackers.<br>
@@ -113,7 +113,7 @@
         </p>
 
         <p>
-            We advice to change any password you may have generated with the QtPass' password generator.
+            We advice to <a href="/downloads">update to 1.2.1</a> as soon as possible and change any password you may have generated with the QtPass' password generator.
 	</p>
 
 	<p>
